--- a/requirements.txt
+++ b/requirements.txt
@@ -13,6 +13,7 @@ Flask-Migrate==2.1.1
 Flask-RESTful==0.3.6
 Flask-Script==2.0.6
 Flask-SQLAlchemy==2.3.2
+Flask-WTF==0.14.2
 itsdangerous==0.24
 Jinja2==2.10
 kombu==4.2.1
@@ -27,5 +28,6 @@ six==1.11.0
 SQLAlchemy==1.2.6
 vine==1.1.4
 Werkzeug==0.14.1
+WTForms==2.2.1
 gunicorn==19.6.0
 gevent
